# wread-mongodb-rs

./: .gitignore  CHANGELOG.MD  Cargo.toml  README.md
src/: axum_error_mapper.rs  crud_repository.rs  data_error.rs  lib.rs  unexpected_error.rs
