[package]
name = "wread-mongodb"
version = "0.17.0"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "read and write data for mongodb"
homepage = "https://github.com/sajuthankappan/wread-data-mongodb-rs"
repository = "https://github.com/sajuthankappan/wread-data-mongodb-rs"
readme = "README.md"
keywords = ["mongodb"]
categories = ["database"]

[dependencies]
futures = "0.3.15"
log = "0.4.14"
mongodb = "2.0.0-beta.3"
serde = { version = "1.0.126", features = ["derive"] }