[package]
name = "wread-mongodb"
version = "0.19.1"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "read and write data for mongodb"
homepage = "https://github.com/sajuthankappan/wread-data-mongodb-rs"
repository = "https://github.com/sajuthankappan/wread-data-mongodb-rs"
readme = "README.md"
keywords = ["mongodb"]
categories = ["database"]

[dependencies]
async-trait = "0.1.52"
futures = "0.3.21"
log = "0.4.14"
mongodb = "2.1.0"
serde = { version = "1.0.136", features = ["derive"] }
